# c-workout-log

./: CMakeLists.txt  README.md  from_json.c  from_json.h  main.c  modifiers.c  modifiers.h  test_workout_data.json  to_json.c  to_json.h  workout.h
